--- a/Application/modules/frontend/templates/frontend/index.html
+++ b/Application/modules/frontend/templates/frontend/index.html
@@ -7,9 +7,9 @@
 
     <p>This skeleton is part of the flask-boilerplate project.</p>
     <ul>
-        <li><a href="https://github.com/nickw444/Flask-Boilerplate">flask-boilerplate</a></li>
-        <li><a href="https://github.com/nickw444/flask-boilerplate-buildutils">flask-boilerplate-buildutils</a></li>
-        <li><a href="https://github.com/nickw444/flask-boilerplate-utils">flask-boilerplate-utils</a></li>
+        <li><a href="https://github.com/nickw444/Flask-Boilerplate">flask-boilerplate</a> (<a href="http://flask-boilerplate.readthedocs.org/en/latest/">Docs</a>)</li>
+        <li><a href="https://github.com/nickw444/flask-boilerplate-buildutils">flask-boilerplate-buildutils</a> (<a href="http://flask-boilerplate-buildutils.readthedocs.org/en/latest/">Docs</a>)</li>
+        <li><a href="https://github.com/nickw444/flask-boilerplate-utils">flask-boilerplate-utils</a> (<a href="http://flask-boilerplate-utils.readthedocs.org/en/latest/">Docs</a>)</li>
     </ul>
 
     <p>Learn about Flask and how to use it <a href="{{ url_for('.learn_flask.MainController:index') }}">here</a></p>
