--- a/Application/modules/frontend/modules/examples/templates/frontend.examples/submodules.html
+++ b/Application/modules/frontend/modules/examples/templates/frontend.examples/submodules.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 <div class="jumbotron">
-
+    <h2>Submodules</h2>
+    <p>By using the <code>Flask-boilerplate-utils</code> NestableBlueprint class, we can achieve nestable blueprints, and allow improved application structure for large apps. </p>
+    <p><a href="{{ url_for('.submodule.Index:index', id=3) }}">This is a link to a submodule, nested underneath the current submodule</a>. Additionally, it takes a URL parameter on the blueprint level, and thus makes use of the <code>Flask-Boilerplate-Utils</code> FlaskView override.</p>
 </div>
 {% endblock %}
