--- a/Application/modules/frontend/templates/frontend/index.html
+++ b/Application/modules/frontend/templates/frontend/index.html
@@ -11,7 +11,7 @@
         <li><a href="https://github.com/nickw444/flask-boilerplate-buildutils">flask-boilerplate-buildutils</a> (<a href="http://flask-boilerplate-buildutils.readthedocs.org/en/latest/">Docs</a>)</li>
         <li><a href="https://github.com/nickw444/flask-boilerplate-utils">flask-boilerplate-utils</a> (<a href="http://flask-boilerplate-utils.readthedocs.org/en/latest/">Docs</a>)</li>
     </ul>
-
+<!-- # Pragma - Start Remove After Cleanup -->
     <p>Learn about Flask and how to use it <a href="{{ url_for('.learn_flask.MainController:index') }}">here</a></p>
 
     <h3>Features</h3>
@@ -23,6 +23,7 @@
         <li>Abstracted config module, share the configuration between multiple python apps.</li>
         <li>Many additional helper decorators and functions included in flask-boilerplate-utils.</li>
     </ul>
-    <!-- <p>Navigate to some examples by clicking the <a href="{{ url_for('.examples.MainController:index') }}"><code>Examples</code></a> button in the top menu</p> -->
-</div>
+
+<!-- # Pragma - End Remove After Cleanup -->
+
 {% endblock %}
