Fixed spelling errors

--- a/Application/modules/frontend/modules/learn_flask/templates/learn_flask/mvc.html
+++ b/Application/modules/frontend/modules/learn_flask/templates/learn_flask/mvc.html
@@ -11,7 +11,7 @@
 		Most tutorials which cover Flask don't cover <i>"Going large"</i>, which is a very big problem. Generally, it is wise to split up the specific parts of your application into smaller more broken down parts.
 	</p>
 	<p>
-		The Flask library makes heavy use for the term <i>"Template"</i>. For this reason, we will refer to MVC <i>"Views"</i> as Templates. 
+		The Flask library makes heavy use of the term <i>"Template"</i>. For this reason, we will refer to MVC <i>"Views"</i> as Templates. 
 	</p>
 </div>
 {% endblock %}
