--- a/Application/modules/frontend/modules/learn_flask/templates/learn_flask/using-the-boilerplate.html
+++ b/Application/modules/frontend/modules/learn_flask/templates/learn_flask/using-the-boilerplate.html
@@ -29,7 +29,7 @@
             <li>templates: A place for global templates. By default, the base template will include the bootstrap static files.</li>
         </ul>
     </p>
-    <p>What about the other folder?
+    <p>What about the other folders?
         <ul>
             <li>libs: This folder contains globally accessible modules for the app. These include the config and models. Neither of these modules are dependent on Flask and can be used in non-flask apps.</li>
             <li>Deploy: Contains deployment specific configuration files for nginx and supervisor.</li>
