--- a/Application/modules/frontend/modules/learn_flask/templates/learn_flask/what-is-flask.html
+++ b/Application/modules/frontend/modules/learn_flask/templates/learn_flask/what-is-flask.html
@@ -11,7 +11,7 @@
 		</ul>
 	</p>
 	<p>
-		Flask makes heave use of Python language features, such as decorators. This makes implementing a Flask WebApp really quick and simple to do. 
+		Flask makes heavy use of Python language features, such as decorators. This makes implementing a Flask WebApp really quick and simple to do. 
 	</p>
 </div>
 {% endblock %}
