--- a/Application/modules/frontend/modules/learn_flask/templates/learn_flask/wsgi-vs-cgi.html
+++ b/Application/modules/frontend/modules/learn_flask/templates/learn_flask/wsgi-vs-cgi.html
@@ -12,7 +12,7 @@
 		WSGI was originally designed for the Python language, and stands for Web Server Gateway Interface. Originally, python web applications required serving via CGI, in a very similar manner to PHP websites.
 	</p>
 	<p>
-		Flask WebApps run as their own contained instances. Flask includes a builtin WSGI server (for development only). When deploying, a WSGI server, such as <code>Gunicorn</code> or <code>meinheld</code>. A WSGI server provides a an interface between your Python instance and HTTP requests.
+		Flask WebApps run as their own contained instances. Flask includes a builtin WSGI server (for development only). When deploying, a WSGI server, such as <code>Gunicorn</code> or <code>meinheld</code> should be used. A WSGI server provides a an interface between your Python instance and HTTP requests.
 	</p>
 </div>
 
